# mastary

./: .gitignore  Cargo.toml  LICENSE.md  flake.nix
src/: icon.rs  init.rs  lib.rs  main.rs  sidebar.rs  theme.rs  winctl.rs  window.rs
src/_/: events.rs  mod.rs
src/_/widget/: sidebar.rs
src/_/widget/pane/: mod.rs
src/pane/: greeting.rs  mod.rs  title.rs
src/panel/: greeting.rs  mod.rs  title.rs
src/ui/: events.rs  mod.rs  update.rs  view.rs
src/ui/widget/pane/: dummy.rs  mod.rs  title.rs
